# catalyzing-femocs

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  feslicescript.py
in/: flat.ckx  md.in
src/: Adaptor.cpp  Adaptor.h  CatalystAdaptor.cpp  CatalystAdaptor.h  main.cpp
